Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in
Files
Files
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 444
    • Issues 444
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 30
    • Merge Requests 30
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Wiki
    • Wiki
  • Members
    • Members
  • Collapse sidebar
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
  • GNOME
  • FilesFiles
  • Issues
  • #661

Closed
Open
Opened Sep 26, 2018 by taciturasa (Adriene)@taciturasa💬

Broken Pathbar w/ High Contrast on Nautilus 3.30

Steps to reproduce

  1. Open Settings.
  2. Set "High Contrast" on in Settings/Accessibility.
  3. Open Nautilus.
  4. (Optional) Maximize window.
  5. Observe top bar.

Reproducible in:

  • Flatpak unstable: yes
  • Other: Antergos, Nautilus 3.30-ce52f649

Current behavior

Like with unofficial themes, under High Contrast, custom pathbar theming is missing, causing a missing pathbar background on large windows, as well as a lack of theming on the separate place buttons, making them appear like regular buttons, and slashes having improper and confusing spacing.

Image of the current behavior.

Expected behavior

High Contrast would emulate the intended behavior under Adwaita with a background for the pathbar on maximized view as well as custom theming for the place buttons.

Edited Sep 26, 2018 by taciturasa (Adriene)
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: GNOME/nautilus#661