pathbar: Use flat style class

We use custom CSS that undecorates pathbar buttons in Adwaita. However,
this doesn't apply to HighContrast, which keeps button borders, and it
looks bad because there are slashes between them.

While some custom styling is still needed, some can be replaced using
the public "flat" class, with the benefit of removing the button
borders in HighContrast (as well as any 3rd party custom theme that
supports the "flat" class).

Do that. Also, remove the now pointless "linked" class.

Fixes: https://gitlab.gnome.org/GNOME/nautilus/issues/661


(cherry picked from commit 1b6f1ef572f21fc7ebc0fe92361979701dea6230)